300-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: minio

spec:
  ports:
    - protocol: TCP
      name: minio
      port: 9000
  selector:
    app: minio
